add swipe to back and tap to stop

--- a/CloudinaryTest/Base.lproj/Main.storyboard
+++ b/CloudinaryTest/Base.lproj/Main.storyboard
@@ -4,8 +4,8 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -59,10 +59,44 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="Edu-qo-Jin" kind="presentation" identifier="Play" id="uXj-9T-8j6"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e4d-cS-hJ1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1864.8" y="132.68365817091455"/>
+        </scene>
+        <!--Player View Controller-->
+        <scene sceneID="0GN-ok-9v8">
+            <objects>
+                <viewController id="Edu-qo-Jin" customClass="PlayerViewController" customModule="CloudinaryTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="g0U-fj-UMX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="vlF-4W-w8B">
+                                <rect key="frame" x="-2" y="20" width="379" height="31"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="thumbTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </slider>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vlF-4W-w8B" firstAttribute="top" secondItem="G6c-dC-Cf3" secondAttribute="top" id="4jX-Nh-QXI"/>
+                            <constraint firstItem="G6c-dC-Cf3" firstAttribute="bottom" secondItem="vlF-4W-w8B" secondAttribute="bottom" constant="617" id="G8l-Rg-TqP"/>
+                            <constraint firstItem="vlF-4W-w8B" firstAttribute="trailing" secondItem="G6c-dC-Cf3" secondAttribute="trailing" id="YES-cm-gie"/>
+                            <constraint firstItem="vlF-4W-w8B" firstAttribute="leading" secondItem="G6c-dC-Cf3" secondAttribute="leading" id="ewE-EV-gUz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="G6c-dC-Cf3"/>
+                    </view>
+                    <connections>
+                        <outlet property="playSlider" destination="vlF-4W-w8B" id="yAQ-7O-ZmV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kkA-F0-Ezn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2748" y="132.68365817091455"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8VO-sp-VHY">
