--- a/CloudinaryTest/Base.lproj/Main.storyboard
+++ b/CloudinaryTest/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -61,6 +60,7 @@
                     </navigationItem>
                     <connections>
                         <segue destination="Edu-qo-Jin" kind="presentation" identifier="Play" id="uXj-9T-8j6"/>
+                        <segue destination="bK5-19-YgP" kind="presentation" identifier="Show" id="WTl-b7-930"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e4d-cS-hJ1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -71,24 +71,24 @@
         <scene sceneID="0GN-ok-9v8">
             <objects>
                 <viewController id="Edu-qo-Jin" customClass="PlayerViewController" customModule="CloudinaryTest" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="g0U-fj-UMX">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="g0U-fj-UMX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="vlF-4W-w8B">
-                                <rect key="frame" x="-2" y="20" width="379" height="31"/>
+                                <rect key="frame" x="-2" y="0.0" width="379" height="31"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="thumbTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vlF-4W-w8B" firstAttribute="top" secondItem="G6c-dC-Cf3" secondAttribute="top" id="4jX-Nh-QXI"/>
-                            <constraint firstItem="G6c-dC-Cf3" firstAttribute="bottom" secondItem="vlF-4W-w8B" secondAttribute="bottom" constant="617" id="G8l-Rg-TqP"/>
-                            <constraint firstItem="vlF-4W-w8B" firstAttribute="trailing" secondItem="G6c-dC-Cf3" secondAttribute="trailing" id="YES-cm-gie"/>
-                            <constraint firstItem="vlF-4W-w8B" firstAttribute="leading" secondItem="G6c-dC-Cf3" secondAttribute="leading" id="ewE-EV-gUz"/>
+                            <constraint firstItem="vlF-4W-w8B" firstAttribute="top" secondItem="g0U-fj-UMX" secondAttribute="top" id="4jX-Nh-QXI"/>
+                            <constraint firstAttribute="bottom" secondItem="vlF-4W-w8B" secondAttribute="bottom" constant="637" id="IF3-di-ibL"/>
+                            <constraint firstItem="vlF-4W-w8B" firstAttribute="trailing" secondItem="g0U-fj-UMX" secondAttribute="trailing" id="YES-cm-gie"/>
+                            <constraint firstItem="vlF-4W-w8B" firstAttribute="leading" secondItem="g0U-fj-UMX" secondAttribute="leading" id="ewE-EV-gUz"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="G6c-dC-Cf3"/>
                     </view>
                     <connections>
                         <outlet property="playSlider" destination="vlF-4W-w8B" id="yAQ-7O-ZmV"/>
@@ -96,7 +96,35 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kkA-F0-Ezn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2748" y="132.68365817091455"/>
+            <point key="canvasLocation" x="3073" y="-278"/>
+        </scene>
+        <!--Photo View Controller-->
+        <scene sceneID="DOg-mc-ocL">
+            <objects>
+                <viewController id="bK5-19-YgP" customClass="PhotoViewController" customModule="CloudinaryTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zTy-HG-aEu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ner-No-Sf7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ner-No-Sf7" firstAttribute="leading" secondItem="zTy-HG-aEu" secondAttribute="leading" id="CFo-I7-KFr"/>
+                            <constraint firstAttribute="trailing" secondItem="ner-No-Sf7" secondAttribute="trailing" id="Ykh-AD-Tg4"/>
+                            <constraint firstItem="ner-No-Sf7" firstAttribute="top" secondItem="zTy-HG-aEu" secondAttribute="top" id="vuv-8L-Bth"/>
+                            <constraint firstAttribute="bottom" secondItem="ner-No-Sf7" secondAttribute="bottom" id="wgL-8L-WWN"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="ner-No-Sf7" id="I3g-Ka-YNe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PSo-nI-e38" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3063.1999999999998" y="451.12443778110946"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8VO-sp-VHY">
